# ChangeLog for net-p2p/freenet
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Oct 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1167.ebuild, +freenet-0.7_p1168.ebuild:
  New upstream release

  29 Oct 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1166.ebuild, +freenet-0.7_p1167.ebuild,
  freenet-9999-r1.ebuild, files/ext.patch, files/freenet, files/freenet.old,
  files/wrapper1.conf:
  New upstream release, update live ebuild, make ebuilds ready for next releases

  27 Oct 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1165.ebuild, +freenet-0.7_p1166.ebuild,
  freenet-9999-r1.ebuild, files/ext.patch, files/wrapper1.conf:
  New upstream release + update live ebuild

  08 Oct 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_p1165.ebuild, freenet-9999-r1.ebuild:
  Add freemail support

  28 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1164.ebuild, +freenet-0.7_p1165.ebuild,
  freenet-9999-r1.ebuild:
  New upstream release + update live ebuild

  19 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_p1164.ebuild, freenet-9999-r1.ebuild:
  Fix symlinks for native FEC libs

  18 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1163.ebuild, +freenet-0.7_p1164.ebuild,
  freenet-9999-r1.ebuild:
  New upstream release + update live ebuild

  14 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_p1163.ebuild, freenet-9999-r1.ebuild:
  Add some userinfo about wrapper config file

  14 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-9999-r1.ebuild:
  Fix live ebuild for first startup

  14 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1162.ebuild, +freenet-0.7_p1163.ebuild,
  freenet-9999-r1.ebuild:
  New upstream release + update ebuilds

  07 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>