@@ -1,10 +1,10 @@
 AUX ext.patch 5906 RMD160 8135e829041e767912e1db3b35299fd5c162d790 SHA1 64f998cb8a8041be3f10925fde9cb0fa24b4ab51 SHA256 747b38acd06a838d39cef93511e9ede250fa3f208c628b13f0bc3ea3be7c6c67
 AUX freenet 476 RMD160 fdce44749587d73cb3f5b916e893e3bb95ef3200 SHA1 48eb8bfbd27a17b0bb3b29248ce4c43b59a76bda SHA256 4a8482117a434e9885438b7ca5384851bff49fefa28b13e33494a746c781342f
 AUX freenet.old 452 RMD160 e9e834fedf4270c14f3e8d754c58eb05f3f570c5 SHA1 edb5d0ab062d46f494db88560885d7ee7b026e29 SHA256 b3047b40128bbd7843dc370ab0aa150a9836ed789f48181bd6d8fc72f1714fa6
-AUX wrapper1.conf 2229 RMD160 a6f8caf1f7d6878791edc5f8f230b3dbe9150e4d SHA1 cff2b9dd41d685ec7f48547e65639e8b17d0144c SHA256 c5190c5178121814ef70fb72a13c9e5e27178845a016842450f9b9debf3d0971
-DIST freenet-0.7_p1168.tar.bz2 2243548 RMD160 a9ed412ef8ea0c20d39f03d16137bc014e596cc3 SHA1 8da752701396cf997f3b215ddbdfb896190b3a3a SHA256 abc91cb405fb1dc54cf8ef39ca8ef616fa9283908e3ff0bdc91ae50bce8fa59f
+AUX wrapper1.conf 2234 RMD160 e314aac24d60a60292bee3bfa3447307105280d5 SHA1 8f6cfd42ba678baa2467e47345ff0bb477b86fb1 SHA256 cc480fe18e88f80e84518f417c6a49d4e538a11c81ef9d2e8a5bffc062492595
+DIST freenet-0.7_p1169.tar.bz2 1323648 RMD160 1228a90e1b503910401047b5263d92bd2e60d0e0 SHA1 f4235dd9ea0f53bf55d18d83c4bf14c54fe42a0b SHA256 9d262130b96560d497580778036f31e14c73bade4468796ec51a77f9fd300cc4
 DIST seednodes-20080928.fref 28703 RMD160 8f92609f1d8beb3164d8f4d5e35c4539a6824dc3 SHA1 9c5a2a2f6188850b8503c1e31ae79e9964c4662a SHA256 ed153fe40f36c6088f97c4d7bed15333722b7e6b27b7c9efd0c506cd7b79f7c3
-EBUILD freenet-0.7_p1168.ebuild 3167 RMD160 635ecf588c62fb6a775884950b10edc425e2a893 SHA1 acab00497e252ec826343cb6204b3e43b70d7a1d SHA256 1eb54009b9a0364395b4939a4a398cbd8ecab3b0beec5cbb96dd1c4d90678f76
-EBUILD freenet-9999-r1.ebuild 3860 RMD160 cb12ca956f6e14c539082e8361e0e5017fab18c6 SHA1 506bd7216f19e947de676795d28cff8f3c6fac25 SHA256 5240ecf19b02602616d13ea58e750f1dd0a49e917d0ebcf1260302374c7ed245
-MISC ChangeLog 14674 RMD160 f84b9b9899064bb2134df90de5d9425ec52ba697 SHA1 caa788a2e0e87b9918259ec89a137a8cf770b3ef SHA256 d1743062ac4cc8a26101a1b8123c64a0b1b09d844a5382d73f07e1729fef4874
+EBUILD freenet-0.7_p1169.ebuild 2757 RMD160 d410e1f5b8e92561b76ad986ac65104aa36e6536 SHA1 a83b537190e233b1a846a09039b81eb5eb8376d8 SHA256 bec6873008945783c61d00b23770418060f418000d6779db8ca87a52dddef8b1
+EBUILD freenet-9999-r1.ebuild 3488 RMD160 dd7640089c6724537bf3648738a31845eb5a51ca SHA1 363f2bf262830d7a882cd731032530f2909cbfbc SHA256 9e6f657f31954bea62f42c4513518b3ae1c2c276565f2cd861183b3bc8e6f62d
+MISC ChangeLog 14877 RMD160 49b2d5f496c1d0406e8a284568ce2a4da48b2386 SHA1 93fe478fb1bc39855a8c2c2da6770e44d6c3d950 SHA256 817502637ce398483f1f4d4b0828d8e25073bf994a4d51cf9dacd26c0ef49386
 MISC metadata.xml 238 RMD160 61d35251af6d2d13fa32d5c455dbf179174ca375 SHA1 b2ff81a006f10b2a9d37722a77eb70be65abb9e8 SHA256 9425b3716c550570a17382ba0b1a9fbf3243483ea6117ae94453ee7047362f8a
