@@ -10,7 +10,7 @@ wrapper.java.classpath.6=/usr/share/ant-core/lib/ant.jar
 wrapper.java.classpath.7=/usr/share/sevenzip/lib/sevenzip.jar
 wrapper.java.classpath.8=/usr/share/lzmajio/lib/lzmajio.jar
 wrapper.java.classpath.9=/usr/share/mersennetwister/lib/mersennetwister.jar
-wrapper.java.library.path.1=lib
+wrapper.java.library.path.1=/usr/lib
 wrapper.java.initmemory=60
 wrapper.java.maxmemory=128
 wrapper.java.additional.1=-Dnetworkaddress.cache.ttl=0
